--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,27 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header{
+  background-color: #ccc;
+  padding: 20px;
+}
+
+main{
+  flex-grow: 1;
+  background-color: rgb(151, 112, 112);
+  padding: 20px;
+}
+
+footer{
+  flex-grow: 0;
+  background-color: rgb(168, 207, 123);
+  padding: 20px;
 }
