--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background-color: #E5E5E5;
+}
+
+html{
+  height: 100%;
 }
 
 code {
@@ -21,21 +27,34 @@ code {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  box-sizing: border-box;
+  max-height: 100vh;
 }
 
-header{
-  background-color: #ccc;
-  padding: 20px;
+header, footer{
+  background-color: #CDD8E1;
+  height: 5vh;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  justify-content: center;
 }
 
 main{
   flex-grow: 1;
-  background-color: rgb(151, 112, 112);
-  padding: 20px;
+  background-color: #E5E5E5;
 }
 
-footer{
-  flex-grow: 0;
-  background-color: rgb(168, 207, 123);
-  padding: 20px;
+a{
+  text-decoration: none;
+  color: #000;
+
+  &:hover{
+    cursor: pointer;
+  }
+}
+
+
+li{
+  list-style-type: none;
 }
